# OpenGLTutorial

./: .gitignore  README.md
Source/: CMakeLists.txt  OpenGLTutorial.sln
Source/BuildScripts/: build.py  clean.py  cmake.py  directories.py  function_timing.py  generate.py  generate_and_build.py
Source/CMakeScripts/: AddGlobbedFiles.cmake  BuildFlags.cmake  ConvertSlashes.cmake
Source/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  File.cpp  File.h  Macros.h  Optional.h  String.cpp  String.h
Source/GettingStarted/: CMakeLists.txt  GettingStarted.vcxproj  GettingStarted.vcxproj.filters  Shader.cpp  Shader.h  main.cpp  shader.frag  shader.vert
Source/GettingStarted/RuntimeResources/: shader.frag  shader.vert
